--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,12 @@
 			"name": "Extension",
 			"type": "extensionHost",
 			"request": "launch",
+			"runtimeExecutable": "${execPath}",
 			"args": [
 				"--extensionDevelopmentPath=${workspaceFolder}"
 			],
 			"outFiles": [
-        "${workspaceFolder}/out/*.js"
+        		"${workspaceFolder}/out/**/*.js"
       		]
 		}
 	]
