--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "grammars": [
       {
         "language": "quest",
-        "scopeName": "main.quest",
+        "scopeName": "source.quest",
         "path": "./syntaxes/quest.tmLanguage.json"
       }
     ],
@@ -43,7 +43,7 @@
   },
   "devDependencies": {
     "@types/vscode": "^1.98.0",
-    "@vscode/vsce": "3.3.1",
+    "@vscode/vsce": "3.3.0",
     "typescript": "5.8.2"
   },
   "scripts": {
